refactored where everything is #core (cherry picked from commit 3b3b781)

--- a/www/index.html
+++ b/www/index.html
@@ -95,32 +95,32 @@
 <script src="js/input/GamePadHandler.js"></script>
 
 <script src="js/render/intern/measureText.js"></script>
-<script src="js/render/intern/entity/SubImage.js"></script>
-<script src="js/render/intern/entity/ImageWrapper.js"></script>
-<script src="js/render/intern/entity/TextWrapper.js"></script>
-<script src="js/render/intern/entity/Drawable.js"></script>
-<script src="js/render/intern/entity/Drawables.js"></script>
-<script src="js/render/intern/entity/Path.js"></script>
-<script src="js/render/intern/entity/Paths.js"></script>
-<script src="js/render/intern/entity/Animation.js"></script>
-<script src="js/render/intern/entity/Animations.js"></script>
-<script src="js/render/intern/entity/Sprite.js"></script>
-<script src="js/render/intern/entity/Sprites.js"></script>
+<script src="js/render/intern/draw/entity/SubImage.js"></script>
+<script src="js/render/intern/draw/entity/ImageWrapper.js"></script>
+<script src="js/render/intern/draw/entity/TextWrapper.js"></script>
+<script src="js/render/intern/draw/entity/Drawable.js"></script>
+<script src="js/render/intern/draw/entity/Drawables.js"></script>
+<script src="js/render/intern/motion/entity/Path.js"></script>
+<script src="js/render/intern/motion/entity/Paths.js"></script>
+<script src="js/render/intern/animation/entity/Animation.js"></script>
+<script src="js/render/intern/animation/entity/Animations.js"></script>
+<script src="js/render/intern/sprite/entity/Sprite.js"></script>
+<script src="js/render/intern/sprite/entity/Sprites.js"></script>
 
 <script src="js/render/intern/CanvasImageCollisionDetector.js"></script>
-<script src="js/render/intern/BasicAnimations.js"></script>
-<script src="js/render/intern/BasicAnimationHelper.js"></script>
-<script src="js/render/intern/BasicAnimationTimer.js"></script>
-<script src="js/render/intern/PropertyAnimations.js"></script>
-<script src="js/render/intern/SpriteAnimations.js"></script>
-<script src="js/render/intern/SpriteAnimationTimer.js"></script>
+<script src="js/render/intern/animation/BasicAnimations.js"></script>
+<script src="js/render/intern/animation/AnimationHelper.js"></script>
+<script src="js/render/intern/animation/AnimationTimer.js"></script>
+<script src="js/render/intern/animation/PropertyAnimations.js"></script>
+<script src="js/render/intern/sprite/SpriteAnimations.js"></script>
+<script src="js/render/intern/sprite/SpriteTimer.js"></script>
 <script src="js/render/intern/inheritMethods.js"></script>
-<script src="js/render/intern/MotionHelper.js"></script>
-<script src="js/render/intern/MotionTimer.js"></script>
-<script src="js/render/intern/Motions.js"></script>
-<script src="js/render/intern/wrapText.js"></script>
-<script src="js/render/intern/ImageRenderer.js"></script>
-<script src="js/render/intern/Renderer.js"></script>
+<script src="js/render/intern/motion/MotionHelper.js"></script>
+<script src="js/render/intern/motion/MotionTimer.js"></script>
+<script src="js/render/intern/motion/Motions.js"></script>
+<script src="js/render/intern/draw/wrapText.js"></script>
+<script src="js/render/intern/draw/ImageRenderer.js"></script>
+<script src="js/render/intern/draw/Renderer.js"></script>
 <script src="js/render/intern/CallbackTimer.js"></script>
 
 <script src="js/render/Stage.js"></script>
@@ -141,27 +141,27 @@
 <script src="js/scene/myscenes/PreGame.js"></script>
 <script src="js/scene/myscenes/StartingPosition.js"></script>
 <script src="js/scene/SceneManager.js"></script>
-<script src="js/bootstrap/installMyScenes.js"></script>
+<script src="js/scene/myscenes/installMyScenes.js"></script>
 <script src="js/app/GameLoop.js"></script>
-<script src="js/bootstrap/app/installLoop.js"></script>
-<script src="js/bootstrap/app/StageFactory.js"></script>
-<script src="js/bootstrap/app/AtlasResourceHelper.js"></script>
-<script src="js/bootstrap/app/ImageResourceHelper.js"></script>
-<script src="js/bootstrap/MyGameResources.js"></script>
+<script src="js/app/bootstrap/installLoop.js"></script>
+<script src="js/render/bootstrap/StageFactory.js"></script>
+<script src="js/render/bootstrap/AtlasResourceHelper.js"></script>
+<script src="js/render/bootstrap/ImageResourceHelper.js"></script>
+<script src="js/MyGameResources.js"></script>
 <script src="js/screen/ResizeHandler.js"></script>
 <script src="js/screen/ResizeBus.js"></script>
 <script src="js/screen/SimpleLoadingScreen.js"></script>
 <script src="js/net/ResourceLoader.js"></script>
-<script src="js/bootstrap/global/installCanvas.js"></script>
-<script src="js/bootstrap/global/installPushRelease.js"></script>
-<script src="js/bootstrap/global/installResize.js"></script>
-<script src="js/bootstrap/global/installTap.js"></script>
-<script src="js/bootstrap/global/installKeyBoard.js"></script>
-<script src="js/bootstrap/global/installGamePad.js"></script>
-<script src="js/bootstrap/global/installKeyPushRelease.js"></script>
-<script src="js/bootstrap/global/installDragNDrop.js"></script>
+<script src="js/platform/bootstrap/installCanvas.js"></script>
+<script src="js/input/bootstrap/installPushRelease.js"></script>
+<script src="js/screen/bootstrap/installResize.js"></script>
+<script src="js/input/bootstrap/installTap.js"></script>
+<script src="js/input/bootstrap/installKeyBoard.js"></script>
+<script src="js/input/bootstrap/installGamePad.js"></script>
+<script src="js/input/bootstrap/installKeyPushRelease.js"></script>
+<script src="js/input/bootstrap/installDragNDrop.js"></script>
 <script src="js/app/App.js"></script>
-<script src="js/bootstrap/Bootstrapper.js"></script>
+<script src="js/app/bootstrap/Bootstrapper.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
