fix rendering issue #core (cherry picked from commit 07e4658)

--- a/www/index.html
+++ b/www/index.html
@@ -120,6 +120,8 @@
 <script src="js/render/intern/motion/Motions.js"></script>
 <script src="js/render/intern/draw/wrapText.js"></script>
 <script src="js/render/intern/draw/renderImage.js"></script>
+<script src="js/render/intern/draw/renderAtlas.js"></script>
+<script src="js/render/intern/draw/renderText.js"></script>
 <script src="js/render/intern/draw/Renderer.js"></script>
 <script src="js/render/intern/CallbackTimer.js"></script>
 
