--- a/www/onscreen-debug.html
+++ b/www/onscreen-debug.html
@@ -59,7 +59,7 @@
 <script src="js/render/intern/motion/Motions.js"></script>
 <script src="js/render/Transition.js"></script>
 <script src="js/scene/myscenes/Credits.js"></script>
-<script src="js/scene/control/range.js"></script>
+<script src="js/utils/range.js"></script>
 <script src="js/scene/component/ObstaclesView.js"></script>
 <script src="js/scene/myscenes/GetReady.js"></script>
 <script src="js/scene/myscenes/Intro.js"></script>
