render curves & geometric stuff #core (cherry picked from commit 4836d6f)

--- a/www/index.html
+++ b/www/index.html
@@ -121,10 +121,17 @@
 <script src="js/render/intern/motion/MotionHelper.js"></script>
 <script src="js/render/intern/motion/MotionTimer.js"></script>
 <script src="js/render/intern/motion/Motions.js"></script>
+
 <script src="js/render/intern/draw/wrapText.js"></script>
+<script src="js/render/intern/draw/renderPolygon.js"></script>
 <script src="js/render/intern/draw/renderImage.js"></script>
 <script src="js/render/intern/draw/renderAtlas.js"></script>
 <script src="js/render/intern/draw/renderText.js"></script>
+<script src="js/render/intern/draw/renderCircle.js"></script>
+<script src="js/render/intern/draw/renderCurve.js"></script>
+<script src="js/render/intern/draw/renderHexagon.js"></script>
+<script src="js/render/intern/draw/renderLine.js"></script>
+<script src="js/render/intern/draw/renderRectangle.js"></script>
 <script src="js/render/intern/draw/Renderer.js"></script>
 <script src="js/render/intern/CallbackTimer.js"></script>
 
