fixing ie11 rendering because fn.name is non standard #core (cherry picked from commit a227196)

--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
 <script src="js/utils/iterateEntries.js"></script>
 <script src="js/utils/iterateSomeEntries.js"></script>
 <script src="js/utils/concatenateProperties.js"></script>
+<script src="js/utils/getFunctionName.js"></script>
 
 <script src="js/net/resolveAtlasPaths.js"></script>
 
