adds rendering & api methods for rectangles #core (cherry picked from commit 23049cb)

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
 <script src="js/resizeutils/changePath.js"></script>
 <script src="js/resizeutils/changeCoords.js"></script>
 <script src="js/resizeutils/changeTouchable.js"></script>
+<script src="js/resizeutils/changeRectangle.js"></script>
 <script src="js/resizeutils/fetchDrawableIntoTouchable.js"></script>
 
 <script src="js/scene/position/calcScreenConst.js"></script>
@@ -106,6 +107,7 @@
 <script src="js/render/intern/draw/entity/SubImage.js"></script>
 <script src="js/render/intern/draw/entity/ImageWrapper.js"></script>
 <script src="js/render/intern/draw/entity/TextWrapper.js"></script>
+<script src="js/render/intern/draw/entity/Rectangle.js"></script>
 <script src="js/render/intern/draw/entity/Drawable.js"></script>
 <script src="js/render/intern/draw/entity/Drawables.js"></script>
 <script src="js/render/intern/animation/entity/Animation.js"></script>
