new height position method #core (cherry picked from commit f4c3920)

--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
 
 <script src="js/scene/position/height/__400.js"></script>
 <script src="js/scene/position/height/getTopRaster.js"></script>
+<script src="js/scene/position/height/getBottomRaster.js"></script>
 <script src="js/scene/position/height/height.js"></script>
 <script src="js/scene/position/height/heightFifth.js"></script>
 <script src="js/scene/position/height/heightFourFifth.js"></script>
