adds new screen constant utility method to #core (cherry picked from commit ccfe2dc)

--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
 <script src="js/scene/position/add.js"></script>
 <script src="js/scene/position/changeSign.js"></script>
 <script src="js/scene/position/subtract.js"></script>
+<script src="js/scene/position/multiply.js"></script>
 <script src="js/scene/position/zero.js"></script>
 
 <script src="js/scene/position/height/__400.js"></script>
