--- a/www/index.html
+++ b/www/index.html
@@ -54,6 +54,8 @@
 <script src="js/scene/position/size/fontSize_5.js"></script>
 <script src="js/scene/position/size/fontSize_10.js"></script>
 <script src="js/scene/position/size/fontSize_15.js"></script>
+<script src="js/scene/position/size/fontSize_20.js"></script>
+<script src="js/scene/position/size/fontSize_25.js"></script>
 <script src="js/scene/position/size/fontSize_30.js"></script>
 <script src="js/scene/position/size/fontSize_35.js"></script>
 <script src="js/scene/position/size/fontSize_40.js"></script>
@@ -77,9 +79,12 @@
 <script src="js/scene/viewhelper/BackGroundHelper.js"></script>
 <script src="js/scene/viewhelper/drawSpeedStripes.js"></script>
 <script src="js/scene/viewhelper/drawSharedGameStuff.js"></script>
+<script src="js/scene/viewhelper/ScoreBoard.js"></script>
 
 <script src="js/scene/component/EnergyStateMachine.js"></script>
 <script src="js/scene/component/GameWorld.js"></script>
+
+<script src="js/render/intern/draw/entity/RectangleMask.js"></script>
 
 <script src="js/scene/control/CanvasCollisionDetector.js"></script>
 <script src="js/scene/component/ScoreView.js"></script>
@@ -114,6 +119,7 @@
 <script src="js/render/intern/draw/entity/Rectangle.js"></script>
 <script src="js/render/intern/draw/entity/Drawable.js"></script>
 <script src="js/render/intern/draw/entity/Drawables.js"></script>
+
 <script src="js/render/intern/animation/entity/Animation.js"></script>
 <script src="js/render/intern/animation/entity/Animations.js"></script>
 <script src="js/render/intern/motion/entity/Paths.js"></script>
