new width & height helper method 'wrap' #core (cherry picked from commit 2cf24a5)

--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
 <script src="js/resizeutils/changeCoords.js"></script>
 <script src="js/resizeutils/changeTouchable.js"></script>
 <script src="js/resizeutils/changeRectangle.js"></script>
+<script src="js/resizeutils/changeMask.js"></script>
 <script src="js/resizeutils/fetchDrawableIntoTouchable.js"></script>
 
 <script src="js/scene/position/calcScreenConst.js"></script>
@@ -36,6 +37,7 @@
 <script src="js/scene/position/subtract.js"></script>
 <script src="js/scene/position/multiply.js"></script>
 <script src="js/scene/position/zero.js"></script>
+<script src="js/scene/position/wrap.js"></script>
 
 <script src="js/scene/position/height/__400.js"></script>
 <script src="js/scene/position/height/getTopRaster.js"></script>
@@ -80,7 +82,9 @@
 <script src="js/scene/viewhelper/drawSpeedStripes.js"></script>
 <script src="js/scene/viewhelper/drawSharedGameStuff.js"></script>
 <script src="js/scene/viewhelper/ScoreBoard.js"></script>
+<script src="js/scene/viewhelper/EnergyBar.js"></script>
 
+<script src="js/scene/component/EnergyBarView.js"></script>
 <script src="js/scene/component/EnergyStateMachine.js"></script>
 <script src="js/scene/component/GameWorld.js"></script>
 
