change position functions to feel more like constants #core (cherry picked from commit 76576a9)

--- a/www/index.html
+++ b/www/index.html
@@ -39,36 +39,9 @@
 <script src="js/scene/position/zero.js"></script>
 <script src="js/scene/position/wrap.js"></script>
 
-<script src="js/scene/position/height/__400.js"></script>
-<script src="js/scene/position/height/getTopRaster.js"></script>
-<script src="js/scene/position/height/getBottomRaster.js"></script>
-<script src="js/scene/position/height/height.js"></script>
-<script src="js/scene/position/height/heightFifth.js"></script>
-<script src="js/scene/position/height/heightFourFifth.js"></script>
-<script src="js/scene/position/height/heightHalf.js"></script>
-<script src="js/scene/position/height/heightQuarter.js"></script>
-<script src="js/scene/position/height/heightThird.js"></script>
-<script src="js/scene/position/height/heightThreeFifth.js"></script>
-<script src="js/scene/position/height/heightThreeQuarter.js"></script>
-<script src="js/scene/position/height/heightTwoFifth.js"></script>
-<script src="js/scene/position/height/heightTwoThird.js"></script>
-
-<script src="js/scene/position/size/fontSize_5.js"></script>
-<script src="js/scene/position/size/fontSize_10.js"></script>
-<script src="js/scene/position/size/fontSize_15.js"></script>
-<script src="js/scene/position/size/fontSize_20.js"></script>
-<script src="js/scene/position/size/fontSize_25.js"></script>
-<script src="js/scene/position/size/fontSize_30.js"></script>
-<script src="js/scene/position/size/fontSize_35.js"></script>
-<script src="js/scene/position/size/fontSize_40.js"></script>
-<script src="js/scene/position/size/fontSize_60.js"></script>
-
-<script src="js/scene/position/width/width.js"></script>
-<script src="js/scene/position/width/widthHalf.js"></script>
-<script src="js/scene/position/width/widthQuarter.js"></script>
-<script src="js/scene/position/width/widthThird.js"></script>
-<script src="js/scene/position/width/widthThreeQuarter.js"></script>
-<script src="js/scene/position/width/widthTwoThird.js"></script>
+<script src="js/scene/position/Height.js"></script>
+<script src="js/scene/position/Width.js"></script>
+<script src="js/scene/position/Font.js"></script>
 
 <script src="js/render/Transition.js"></script>
 <script src="js/scene/viewhelper/ShieldsHelper.js"></script>
