translator has now a repository to switch text fields refs #34 (switch language) #core (cherry picked from commit 1203311)

--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
 <script src="js/render/intern/motion/entity/Line.js"></script>
 <script src="js/render/intern/motion/entity/BezierCurve.js"></script>
 
-<script src="js/resizeutils/Repository.js"></script>
+<script src="js/utils/Repository.js"></script>
 <script src="js/resizeutils/changePath.js"></script>
 <script src="js/resizeutils/changeCoords.js"></script>
 <script src="js/resizeutils/changeTouchable.js"></script>
