--- a/www/onscreen-debug.html
+++ b/www/onscreen-debug.html
@@ -11,7 +11,7 @@
 
 <script src="console-log-viewer.js"></script>
 
-<script src="js/resizeutils/Repository.js"></script>
+<script src="js/utils/Repository.js"></script>
 <script src="js/resizeutils/changePath.js"></script>
 <script src="js/resizeutils/changeCoords.js"></script>
 <script src="js/resizeutils/changeTouchable.js"></script>
