refactoring of full screen change events & request fs system service refs #35 - handle orientation #core (cherry picked from commit b009d51)

--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
 <script src="js/utils/concatenateProperties.js"></script>
 <script src="js/utils/getFunctionName.js"></script>
 <script src="js/utils/Vectors.js"></script>
-<script src="js/platform/getDevicePixelRatio.js"></script>
+<script src="js/screen/getDevicePixelRatio.js"></script>
 
 <script src="js/net/resolveAtlasPaths.js"></script>
 
@@ -74,8 +74,8 @@
 <script src="js/platform/addFontToDOM.js"></script>
 <script src="js/platform/requestAnimFrame.js"></script>
 <script src="js/platform/BrowserOracle.js"></script>
-<script src="js/platform/FullScreenController.js"></script>
-<script src="js/platform/ScreenOrientation.js"></script>
+<script src="js/screen/FullScreenController.js"></script>
+<script src="js/screen/OrientationLock.js"></script>
 
 <script src="js/input/entity/Touchable.js"></script>
 <script src="js/input/entity/Touchables.js"></script>
@@ -166,11 +166,14 @@
 <script src="js/screen/SimpleLoadingScreen.js"></script>
 <script src="js/screen/OrientationBus.js"></script>
 <script src="js/screen/OrientationHandler.js"></script>
+<script src="js/screen/FullScreenBus.js"></script>
+<script src="js/screen/FullScreenHandler.js"></script>
 <script src="js/net/ResourceLoader.js"></script>
 <script src="js/platform/bootstrap/installCanvas.js"></script>
 <script src="js/input/bootstrap/installPushRelease.js"></script>
 <script src="js/screen/bootstrap/installResize.js"></script>
 <script src="js/screen/bootstrap/installOrientation.js"></script>
+<script src="js/screen/bootstrap/installFullScreen.js"></script>
 <script src="js/input/bootstrap/installTap.js"></script>
 <script src="js/input/bootstrap/installKeyBoard.js"></script>
 <script src="js/input/bootstrap/installGamePad.js"></script>
