introduces an event bus for better handling of the temp rotate device screen refs #35 - handle orientation #core (cherry picked from commit 692a180)

--- a/www/index.html
+++ b/www/index.html
@@ -138,6 +138,8 @@
 <script src="js/input/bootstrap/installOneTimeTap.js"></script>
 <script src="js/screen/Orientation.js"></script>
 <script src="js/scene/myscenes/SplashScreen.js"></script>
+<script src="js/scene/myscenes/RotateDevice.js"></script>
+<script src="js/scene/myscenes/GoFullScreen.js"></script>
 <script src="js/scene/myscenes/Settings.js"></script>
 <script src="js/scene/myscenes/Credits.js"></script>
 <script src="js/utils/range.js"></script>
@@ -179,6 +181,7 @@
 <script src="js/input/bootstrap/installGamePad.js"></script>
 <script src="js/input/bootstrap/installKeyPushRelease.js"></script>
 <script src="js/input/bootstrap/installDragNDrop.js"></script>
+<script src="js/app/EventBus.js"></script>
 <script src="js/app/App.js"></script>
 <script src="js/app/bootstrap/Bootstrapper.js"></script>
 <script src="js/main.js"></script>
