--- a/www/index.html
+++ b/www/index.html
@@ -87,6 +87,8 @@
 <script src="js/input/entity/Key.js"></script>
 <script src="js/input/KeyHandler.js"></script>
 <script src="js/input/GamePadHandler.js"></script>
+<script src="js/input/PointerHandler.js"></script>
+<script src="js/input/TapManager.js"></script>
 
 <script src="js/render/intern/measureText.js"></script>
 <script src="js/render/intern/draw/entity/SubImage.js"></script>
@@ -171,6 +173,7 @@
 <script src="js/screen/bootstrap/installResize.js"></script>
 <script src="js/screen/bootstrap/installOrientation.js"></script>
 <script src="js/screen/bootstrap/installFullScreen.js"></script>
+<script src="js/input/bootstrap/installPointer.js"></script>
 <script src="js/input/bootstrap/installKeyBoard.js"></script>
 <script src="js/input/bootstrap/installGamePad.js"></script>
 <script src="js/app/EventBus.js"></script>
